--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -11,7 +11,8 @@
   /* min-height: 75vh; */
   /* min-width: 100vh; */
   width: 100%;
-  height: 72vh;
+  /* height: 72vh; */
+  height: 76vh;
   z-index: 1;
 }
 
@@ -31,12 +32,12 @@
 }
 
 .video-des {
-  margin-top: 45px;
-  margin-bottom: 25px;
+  margin-top: 85px;
+  margin-bottom: 5px;
 }
 
 .video-title {
-  width: 650px;
+  width: 725px;
   margin-bottom: 25px;
 }
 
@@ -52,7 +53,8 @@
 
 .video-line-2 {
   position: absolute;
-  height: 780px;
+  height: 81.5%;
+  /* height: 780px; */
   /* left: 655px; */
   margin-left: 34.2%;
   z-index: 2;
@@ -62,7 +64,7 @@
 .video-line-3 {
   position: absolute;
   /* height: 780px; */
-  height: 77%;
+  height: 81.5%;
   /* left: 1563px; */
   margin-left: 82.3%;
   z-index: 2;
