--- a/react-app/src/components/Navigation/NavBar.css
+++ b/react-app/src/components/Navigation/NavBar.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 73.5px;
   position: fixed;
-  z-index: 5;
+  z-index: 10;
   border-bottom: 1px solid #1A1A1A;
 }
 
@@ -93,12 +93,14 @@
 .nav-profile {
   color: white;
   background-color: #282828;
-  margin-right: 40px;
+  /* margin-right: 40px; */
   padding: 7px 20px;
   border-radius: 7px;
   font-size: 14px;
   position: relative;
   display: inline-block;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .profile-dropdown {
