--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -3,6 +3,7 @@
   /* for title */
   font-family: 'Antonio', sans-serif;
   /* for text */
+  font-family: 'Anton', sans-serif;
   font-family: 'Cabin', sans-serif;
 }
 
