--- a/react-app/src/components/AllMedia/AllMedia.css
+++ b/react-app/src/components/AllMedia/AllMedia.css
@@ -144,11 +144,9 @@
 }
 
 .media-top-title {
-  font-family: 'Antonio', sans-serif;
-  font-weight: bolder;
+  font-family: 'Anton', sans-serif;
   font-size: 100px;
-  font-weight: 700;
-  margin-bottom: 35px;
+  margin-bottom: 10px;
 }
 
 .media-top-des {
@@ -156,7 +154,7 @@
   font-family: 'Cabin', sans-serif;
   font-size: 16px;
   font-weight: 400;
-  margin-bottom: 20px;
+  margin-bottom: 22px;
   line-height: 23px;
 }
 
