--- a/react-app/src/components/SingleTicket/SingleTicket.css
+++ b/react-app/src/components/SingleTicket/SingleTicket.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 800px;
+  width: 900px;
 }
 
 .single-ticket-wapper{
@@ -18,6 +18,10 @@
 .left-ticket{
   width: 200px;
   font-size: 14px;
+}
+
+.empty-single-tickets{
+  width:200px;
 }
 
 .right-ticket{
