--- a/react-app/src/components/auth/SignUp/SignUpForm.css
+++ b/react-app/src/components/auth/SignUp/SignUpForm.css
@@ -8,6 +8,7 @@
   justify-content: flex-end;
   display: flex;
   align-items: center;
+  /* position: relative; */
 }
 
 .signup-form-wrapper {
@@ -19,6 +20,7 @@
   height: auto;
   padding: 60px 40px;
   margin-right: 50px;
+  position: relative;
 }
 
 .signup-page-text {
@@ -34,7 +36,8 @@
   line-height: 80px;
   letter-spacing: 10px;
 }
-.signup-message{
+
+.signup-message {
   display: flex;
   font-size: 35px;
   font-weight: bold;
@@ -137,7 +140,7 @@
   color: white;
 }
 
-.submit-signup-button:disabled{
+.submit-signup-button:disabled {
   background-color: #F9F9F9;
   padding: 30px;
   border: 2px solid #E8E8E8;
@@ -163,16 +166,21 @@
 .signup-links-pages {
   display: flex;
   flex-direction: row;
-  position: relative;
-  top: -360px;
-  left: 630px;
+  position: absolute;
+  /* top: -360px; */
+  /* left: 630px; */
+  right: 0px;
+  top:-28px;
+  /* bottom: 0; */
   gap: 10px
 }
 
 .signup-individual-pages {
   background-color: #fababf;
-  width: 30px;
-  height: 5px;
+  /* width: 30px;
+  height: 5px; */
+  width: 35px;
+  height: 6px;
   cursor: pointer;
 }
 
@@ -289,7 +297,7 @@
   height: 60px;
 }
 
-.singup-link-home{
+.singup-link-home {
   text-decoration: none;
   color: inherit;
 }
@@ -297,6 +305,7 @@
 .signup-home-individual-logo:hover {
   filter: invert(99%) sepia(2%) saturate(2246%) hue-rotate(254deg) brightness(118%) contrast(86%);
 }
+
 .signup-home-logo:hover+div {
   color: #101D2C;
 }
@@ -305,12 +314,13 @@
 .signup-home:hover .signup-home-individual-logo {
   filter: invert(99%) sepia(2%) saturate(2246%) hue-rotate(254deg) brightness(118%) contrast(86%);
 }
+
 .signup-home:hover .signup-home-name {
   color: #101D2C;
 }
 
 
-.singin-link-home{
+.singin-link-home {
   text-decoration: none;
   color: inherit;
 }
@@ -330,5 +340,3 @@
   justify-content: center;
   align-items: center;
 }
-
-
