--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -43,7 +43,7 @@
 
 .video-line {
   position: absolute;
-  height: 3500px;
+  height: 4500px;
   margin-left: 17.8%;
   /* left: 338px; */
   border-left: 1px solid white;
@@ -76,6 +76,7 @@
   /* display: flex;
   justify-content: center;
   flex-direction: column; */
+  overflow: hidden;
 }
 
 .home-latest {
@@ -119,7 +120,6 @@
   font-size: 92px;
   font-family: 'Anton', sans-serif;
   color: #FF4655;
-  /* top: 40px; */
   z-index: 6;
 }
 
@@ -172,6 +172,8 @@
   width: 100%;
   height: 250px;
   background-color: #111111;
+  position: relative;
+  z-index: 11;
 }
 
 .proj-directory-wrapper {
@@ -545,24 +547,26 @@
 .agent-wrapper {
   display: flex;
   position: relative;
-  /* justify-content: center;
-  align-items: center; */
   width: 100%;
   height: 867px;
   margin-top: 50px;
   flex-direction: column;
 
   background-color: #FF4655;
+  z-index: 8;
 }
 
 .agent-gif-wrap {
   position: absolute;
   top: -155px;
   left: 245px;
+  /* z-index: 20; */
 }
 
-.agent-gif{
+.agent-gif {
   height: 1100px;
+  position: relative;
+  /* z-index: 20; */
 }
 
 .agent-right {
@@ -577,7 +581,7 @@
   width: 480px;
 }
 
-.agent-title{
+.agent-title {
   margin-top: 45px;
   font-family: 'Anton', sans-serif;
   font-size: 110px;
@@ -586,7 +590,7 @@
   width: 400px;
 }
 
-.agent-title-2{
+.agent-title-2 {
   margin-top: 50px;
   font-size: 20px;
   color: #ECE8E1;
@@ -594,7 +598,7 @@
   font-weight: 500;
 }
 
-.agent-des{
+.agent-des {
   margin-top: 25px;
   color: #ECE8E1;
   line-height: 25px;
@@ -639,7 +643,7 @@
   transition: transform 200ms ease-in-out;
 }
 
-#agent-button:hover{
+#agent-button:hover {
   color: #ECE8E1;
   transition: 0.8s;
   transition: transform 200ms ease-in-out;
@@ -679,62 +683,147 @@
 
 
 
-.agent-wrapper {
-  display: flex;
+.map-wrapper {
   position: relative;
-  /* justify-content: center;
-  align-items: center; */
   width: 100%;
   height: 867px;
   margin-top: 50px;
   flex-direction: column;
-
-  background-color: #FF4655;
+  margin-left: 17.8%;
+  margin-bottom: -100px;
 }
 
-.agent-gif-wrap {
+.map-img{
   position: absolute;
-  top: -155px;
-  left: 245px;
+  top: -130px;
+  left: 320px;
+  z-index: 0;
+  /* width:70%; */
+  height: 900px;
+  z-index: 10;
 }
 
-.agent-gif{
-  height: 1100px;
-}
-
-.agent-right {
+.map-left {
   position: absolute;
-  right: 340px;
+  left: 100px;
   top: -0;
   margin-top: 100px;
   display: flex;
   flex-direction: column;
   height: 600px;
-  border-top: 1px solid #F7868D;
+  border-top: 1px solid #949695;
   width: 480px;
+  color: #0F1923;
+  z-index: 11;
 }
 
-.agent-title{
+.map-title {
   margin-top: 45px;
   font-family: 'Anton', sans-serif;
   font-size: 110px;
-  color: #ECE8E1;
   line-height: 120px;
-  width: 400px;
+  /* width: 400px; */
 }
 
-.agent-title-2{
+.map-title-2 {
   margin-top: 50px;
   font-size: 20px;
-  color: #ECE8E1;
   width: 400px;
   font-weight: 500;
 }
 
-.agent-des{
+.map-des {
   margin-top: 25px;
-  color: #ECE8E1;
   line-height: 25px;
   width: 380px;
-  /* position: relative; */
+  color: #929591;
+}
+
+.map-but {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 270px;
+  /* width: 100%; */
+  height: 50px;
+  font-weight: bolder;
+  cursor: pointer;
+  font-family: 'Cabin', sans-serif;
+  transition: 0.8s;
+  position: relative;
+  border: none;
+  overflow: hidden;
+  color: var(--color);
+  background-color: var(--background-color);
+
+  color: black;
+}
+
+#map-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #0F1923;
+  z-index: -1;
+
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 200ms ease-in-out;
+}
+
+#map-button:hover::before,
+#map-button:focus::before {
+  transform: scaleX(1);
+}
+
+#map-button {
+  color: #ECE8E1;
+  background-color: #FF4655;
+  z-index: 1;
+  transition: transform 200ms ease-in-out;
+
+}
+
+.map-boader {
+  border: 1px solid #BDBCB7;
+  padding: 5px;
+  width: 270px;
+}
+
+.map-button-wrap {
+  margin-top: 50px;
+}
+
+
+.map-background-wrap {
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #dbd8d2;
+  font-size: 300px;
+  position: absolute;
+  /* z-index: 0; */
+  left: -100px;
+  top: -370px;
+  letter-spacing: 30px;
+  /* margin-top: -300px; */
+  transition: 0.5s;
+  z-index: 1;
+}
+
+.map-background-1{
+  word-spacing: 20px;
+  font-family: 'Anton', sans-serif;
+  z-index: 1;
+
+}
+
+.bird-img{
+  position: absolute;
+  left: 1300px;
+  top: 200px;
+  transition: 0.8s;
 }
