--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -265,6 +265,8 @@
   height: 850px;
   object-fit: none;
   object-position: -770px 0px;
+  z-index: 1;
+  position: relative
 }
 
 .overview-text {
@@ -403,6 +405,8 @@
   margin-left: 120px;
 }
 
+
+
 .we-are-title {
   margin-top: 20px;
   display: flex;
@@ -411,6 +415,8 @@
   font-size: 110px;
   font-family: 'Anton', sans-serif;
   color: #0F1923;
+  z-index: 0;
+  position: relative
 }
 
 .defy-wrapper {
