--- a/react-app/src/components/Comments/Comments.css
+++ b/react-app/src/components/Comments/Comments.css
@@ -104,3 +104,24 @@
   color: #DA363A;
   border-color: #ffd0d0;
 }
+
+
+.comment-error {
+  border: 1px solid #E35B66;
+  background-color: #FFF0F1;
+  width: 98%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  padding-left: 5px;
+  gap: 5px;
+  color: #E35B66;
+  font-size: 14px;
+}
+
+
+.caution {
+  width: 20px;
+}
