--- a/react-app/src/components/TicketForm/TicketForm.css
+++ b/react-app/src/components/TicketForm/TicketForm.css
@@ -178,3 +178,35 @@
   color:#E35B66;
   font-size: 14px;
 }
+
+.ticket-file-name {
+  font-size: 10px;
+  display: flex;
+  flex-direction: column;
+  letter-spacing: 1px;
+  margin-top: 10px;
+  position: relative;
+  right: 0px;
+}
+
+.no-show-name{
+  display: none;
+}
+
+.ticket-input-1 {
+  margin-top: 10px;
+  border: 1px dashed #ECE8E1;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.ticket-label-items{
+  display:flex;
+  flex-direction: column;
+  width: 100%;
+  height: 150px;
+}
