--- a/react-app/src/components/Home/Home.css
+++ b/react-app/src/components/Home/Home.css
@@ -540,11 +540,10 @@
 }
 
 .defy-gif {
+  width: 700px;
+  z-index: 1;
   position: relative;
-  left: 100px;
-  width: 100%;
-  object-fit: none;
-  object-position: -10px 0px;
+
 }
 
 .defy-gif-button {
@@ -556,13 +555,28 @@
   z-index: 6;
 }
 
+.defy-border {
+  position: relative;
+  left: 100px;
+  width: 700px;
+  top: 10px;
+  background-color: #000000;
+  display: flex;
+}
+
+.defy-gif-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
 
 .defy-gif-button-wrapper {
   background-color: rgba(255, 70, 85, .3);
   position: absolute;
   object-fit: cover;
-  top: 180px;
-  right: 450px;
+  top: 40%;
+  right: 45%;
   width: 70px;
   height: 70px;
   z-index: 1;
@@ -577,6 +591,25 @@
 
 .defy-gif-wrapper:hover .defy-gif-overlay {
   width: 100%;
+}
+
+.defy-gameplay {
+  position: relative;
+  margin-left: -100px;
+  width: 100px;
+  background-color: #FF4655;
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25px;
+  left: 80px;
+  top: 20px;
+  cursor: default;
+  z-index: 2;
+  text-decoration: none;
 }
 
 .defy-gif-overlay {
@@ -594,15 +627,55 @@
   opacity: 1;
 }
 
-.agent-triangle{
+
+.defy-dots-1 {
+  width: 8px;
+  position: absolute;
+  height: 8px;
+  background-color: #FF4655;
+  top: -45px;
+}
+
+.defy-dots-2 {
+  margin-left: 50px;
+  width: 8px;
+  height: 8px;
+  background-color: #FF4655;
+  position: absolute;
+  top: -45px;
+}
+
+.agent-triangle {
   width: 400px;
   height: 100px;
   position: absolute;
   background-color: #FF4655;
   transform: rotate(10deg);
-  left:-20px;
-  top: -2px;
+  left: -20px;
+  top: -27px;
 
+}
+
+.defy-vid-line {
+  position: absolute;
+  margin-left: -100px;
+  width: 110px;
+  background-color: #FF4655;
+  height: 25px;
+  left: 100px;
+  bottom: -5px;
+  z-index: 0;
+}
+
+.video-triangle {
+  width: 200px;
+  height: 100px;
+  position: absolute;
+  background-color: #ECE8E1;
+  transform: rotate(50deg);
+  left: -100px;
+  bottom: 120px;
+  z-index: 10;
 }
 
 .agent-wrapper {
@@ -615,6 +688,18 @@
 
   background-color: #FF4655;
   z-index: 8;
+}
+
+.defy-00 {
+  position: absolute;
+  font-family: 'Anton', sans-serif;
+  font-size: 40px;
+  color: #DBD9D2;
+  border-top: 5px #DBD9D2 solid;
+  padding: 0;
+  line-height: 60px;
+  left: -120px;
+  bottom: -100px;
 }
 
 /* .agent-gif-wrap { */
