--- a/react-app/src/components/TicketForm/EditTicketForm/EditTicketForm.css
+++ b/react-app/src/components/TicketForm/EditTicketForm/EditTicketForm.css
@@ -1,11 +1,24 @@
 .ticket-close-edit{
   width: 50px;
+  height: 50px;
   border: 1px solid #ECE8E1;
   position: relative;
-  left: 320px;
-  top: -25px;
+  left: 350px;
+  top: -43px;
   padding: 5px;
+  cursor: pointer;
+
+  overflow: hidden;
+}
+
+.ticket-close-edit-img{
   transition: transform 200ms ease-in-out;
+  width: 50px;
+  height: 50px;
+}
+
+.ticket-close-edit:hover .ticket-close-edit-img{
+  transform: scale(1.1);
 }
 
 .edit-ticket-form-wrapper{
