--- a/react-app/src/components/SingleTicket/DeleteTicket/DeleteTicket.css
+++ b/react-app/src/components/SingleTicket/DeleteTicket/DeleteTicket.css
@@ -11,17 +11,25 @@
 
 .ticket-close-delete{
   width: 50px;
+  height: 50px;
   border: 1px solid #ECE8E1;
   position: relative;
   left: 370px;
-  top: -30px;
+  top: -35px;
   padding: 5px;
-  /* transition: transform 200ms ease-in-out; */
   cursor: pointer;
-  /* flex-grow: 1; */
-  transform: scale(1.1);
 
-  transition: all 0.5s ease;
+  overflow: hidden;
+}
+
+.ticket-close-delete-img{
+  transition: transform 200ms ease-in-out;
+  width: 50px;
+  height: 50px;
+}
+
+.ticket-close-delete:hover .ticket-close-delete-img{
+  transform: scale(1.1);
 }
 
 .button-delete-ticket{
