SiteWide Minor CSS Changes

--- a/react-app/src/components/AllMedia/ImgModal.css
+++ b/react-app/src/components/AllMedia/ImgModal.css
@@ -22,7 +22,7 @@
   /* height: auto; */
 }
 
-.close-img-modal {
+/* .close-img-modal {
   width: 60px;
   border: 1px solid #ECE8E1;
   position: absolute;
@@ -31,6 +31,29 @@
   left: 1158px;
   cursor: pointer;
   transition: transform 200ms ease-in-out;
+} */
+
+.close-img-modal{
+  width: 55px;
+  height: 55px;
+  border: 1px solid #ECE8E1;
+  position: relative;
+  left: 581px;
+  top: -294px;
+  padding: 5px;
+  cursor: pointer;
+
+  overflow: hidden;
+}
+
+.close-img-modal-img{
+  transition: transform 200ms ease-in-out;
+  width: 55px;
+  height: 55px;
+}
+
+.close-img-modal:hover .close-img-modal-img{
+  transform: scale(1.1);
 }
 
 .img-modal-content {
@@ -116,5 +139,28 @@
   z-index: 5;
   transition: .2s ease;
   opacity: 0.6;
+  /* border: 1px solid #ECE8E1; */
+}
+
+
+
+.close-img-modal:hover .close-img-overlay {
+  width: 100%;
+  position: absolute;
+}
+
+.close-img-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  background-color: #0F1923;
+  overflow: hidden;
+  width: 0;
+  height: 100%;
+  /* z-index: 5; */
+  transition: .2s ease;
+  /* opacity: 0.6; */
   /* border: 1px solid #ECE8E1; */
 }
