--- a/react-app/src/components/TicketForm/TicketForm.css
+++ b/react-app/src/components/TicketForm/TicketForm.css
@@ -160,7 +160,12 @@
   margin-top: 10px;
 }
 
-.whatever{
+.button-create-ticket:hover {
+  background-color: #c53136;
+  transition: 0.2s ease;
+}
+
+.whatever {
   border: 5px solid black;
 }
 
@@ -175,7 +180,7 @@
   margin-bottom: 10px;
   padding-left: 5px;
   gap: 5px;
-  color:#E35B66;
+  color: #E35B66;
   font-size: 14px;
 }
 
@@ -189,7 +194,7 @@
   right: 0px;
 }
 
-.no-show-name{
+.no-show-name {
   display: none;
 }
 
@@ -204,8 +209,8 @@
   cursor: pointer;
 }
 
-.ticket-label-items{
-  display:flex;
+.ticket-label-items {
+  display: flex;
   flex-direction: column;
   width: 100%;
   height: 150px;
